--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.2",
+    "cookies-next": "^2.1.2",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.66.1",
     "react-hook-form": "^7.46.1",
-    "react-redux": "^8.1.2",
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
-    "cookies-next": "^2.1.2"
+    "react-redux": "^8.1.3",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
@@ -32,13 +33,13 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
-    "typescript": "^5.4.3",
     "postcss-scss": "^4.0.8",
     "prettier": "^2.8.8",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^5.2.1"
+    "stylelint-scss": "^5.2.1",
+    "typescript": "^5.4.3"
   }
 }
