--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.3",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
