--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.2",
+    "fast-average-color": "^9.4.0",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
